--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
+    "apexcharts": "^3.22.2",
     "chart.js": "^2.9.4",
     "emotion-theming": "^10.0.27",
+    "eslint-plugin-import": "^2.22.1",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
+    "react-apexcharts": "^1.3.7",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
