--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
+    "apexcharts": "^3.22.2",
     "chart.js": "^2.9.4",
     "emotion-theming": "^10.0.27",
     "eslint-plugin-import": "^2.22.1",
+    "history": "^4.10.1",
     "node-sass": "^4.14.1",
     "patch-package": "^6.2.2",
     "react": "^16.14.0",
