--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "socket.io-client": "^3.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -45,5 +45,6 @@
   "devDependencies": {
     "@chakra-ui/core": "^0.8.0",
     "effector": "^21.7.2"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
