--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-apexcharts": "^1.3.7",
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
+    "react-input-switch": "^2.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "socket.io-client": "^3.0.3"
